--- a/act1/angular.json
+++ b/act1/angular.json
@@ -100,6 +100,12 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "repo": "https://github.com/Hcato/act2-zzz.git"
+          }
         }
       }
     }
